--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -2,7 +2,7 @@ sourceCompatibility = 1.7
 sourceSets.main.java.srcDirs = [ "src/" ]
 sourceSets.main.resources.srcDirs = ["../core/assets"]
 
-project.ext.mainClassName = "com.pirate.game.desktop.DesktopLauncher"
+project.ext.mainClassName = "com.isometric.game.desktop.DesktopLauncher"
 project.ext.assetsDir = new File("../core/assets")
 
 task run(dependsOn: classes, type: JavaExec) {
@@ -31,6 +31,10 @@ task dist(type: Jar) {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
     with jar
+}
+
+dependencies {
+    implementation 'org.lwjgl:lwjgl:3.2.3'
 }
 
 
