--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-hacker
-heading: A website for Cohort 1, Team 4, developing an isometric, real-time pirate game.
+title: A website for Cohort 1, Team 4, developing an isometric, real-time pirate game.
