--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ project(":desktop") {
         api "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
-        api "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
+//        api "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
         
     }
 }
